--- a/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
@@ -105,9 +105,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="18dp"
-                        android:layout_marginRight="22dp"
-                        android:drawableLeft="@drawable/ic_mom_vlog_banner_button"
+                        android:layout_marginStart="18dp"
+                        android:layout_marginEnd="22dp"
+                        android:drawableStart="@drawable/ic_mom_vlog_banner_button"
                         android:drawablePadding="10dp"
                         android:text="@string/mom_vlog_banner_button"
                         android:textColor="@color/app_red"
