--- a/MyCity4Kids/MyCity4Kids/res/layout/add_video_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_video_details_activity.xml
@@ -40,12 +40,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
         android:backgroundTint="@color/common_underline"
         android:hint="@string/add_video_details.title_hint"
-        android:paddingBottom="20dp"
         android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:textColor="@color/add_video_details.title_text"
         android:textColorHint="@color/add_video_details.title_hint"
         android:textSize="16sp"
@@ -65,7 +65,8 @@
         android:padding="20dp"
         android:text="@string/add_video_details.mute_label"
         android:textColor="@color/add_video_details.mute_label"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        />
 
     <View
         android:id="@+id/underline1"
@@ -122,7 +123,7 @@
         android:gravity="center"
         android:padding="15dp"
         android:text="@string/add_video_details.save_upload"
-        android:textColor="@color/add_video_details.save_upload"
+        android:textColor="@color/app_red"
         android:textSize="17sp"
         fab:fontName="oswald_regular.ttf" />
 </RelativeLayout>
