--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -187,8 +187,8 @@
             android:layout_marginTop="16dp"
             android:text="@string/about_txt"
             android:textAllCaps="true"
-            android:textColor="@color/app_light_black"
-            android:textSize="18sp"
+            android:textColor="@color/app_grey"
+
             app:fontName="oswald_regular.ttf" />
 
         <com.mycity4kids.widget.CustomFontEditText
@@ -219,7 +219,7 @@
             android:layout_marginBottom="3dp"
             android:text="@string/child_details"
             android:textAllCaps="true"
-            android:textColor="@color/app_light_black"
+            android:textColor="@color/app_grey"
             android:textSize="16sp"
             app:fontName="oswald_regular.ttf" />
 
@@ -236,8 +236,8 @@
             android:layout_marginTop="16dp"
             android:text="@string/add_child_details"
             android:textAllCaps="true"
-            android:textColor="@color/app_light_black"
-            android:textSize="16sp"
+            android:textColor="@color/app_grey"
+
             app:fontName="oswald_regular.ttf" />
 
         <RelativeLayout
