--- a/MyCity4Kids/MyCity4Kids/res/layout/ranking_home_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/ranking_home_fragment.xml
@@ -13,7 +13,7 @@
         android:elevation="5dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabIndicatorColor="@color/ranking.tab_indicator"
+        app:tabIndicatorColor="@color/app_red"
         app:tabIndicatorHeight="3dp"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/ranking.tabs_label"
