--- a/MyCity4Kids/MyCity4Kids/res/layout/user_published_and_drafts_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_published_and_drafts_activity.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/user_article.toolbar.title"
+                android:text="@string/user_article.tabbar.published_label"
                 android:textColor="@color/user_articles.toolbar.title"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
