--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_notification.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_notification.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
 
-    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/tools"
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -15,7 +15,7 @@
         app:theme="@style/ToolbarTheme">
 
         <RelativeLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">
 
@@ -25,9 +25,10 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:text="@string/notification"
-                android:textColor="@color/black"
+                android:textColor="@color/home.toolbar.titlecolor"
                 android:textSize="20sp"
-                app:fontName="oswald_regular.ttf" />
+                app:fontName="oswald_regular.ttf"
+                app:textAllCaps="true" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
