--- a/MyCity4Kids/MyCity4Kids/res/layout/add_video_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_video_details_activity.xml
@@ -65,8 +65,7 @@
         android:padding="20dp"
         android:text="@string/add_video_details.mute_label"
         android:textColor="@color/add_video_details.mute_label"
-        android:textSize="14sp"
-        />
+        android:textSize="14sp" />
 
     <View
         android:id="@+id/underline1"
@@ -75,35 +74,6 @@
         android:layout_below="@+id/muteVideoSwitch"
         android:background="@color/common_underline" />
 
-    <!--<RelativeLayout-->
-    <!--android:id="@+id/addMusicContainer"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/underline1">-->
-
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/audioTextView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:padding="20dp"-->
-    <!--android:text="@string/add_video_details.add_music"-->
-    <!--android:textColor="@color/add_video_details.add_music"-->
-    <!--android:textSize="14sp"-->
-    <!--fab:fontName="oswald_regular.ttf" />-->
-
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/removeCustomAudioTextView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:layout_centerVertical="true"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:padding="20dp"-->
-    <!--android:text="@string/add_video_details.remove"-->
-    <!--android:textColor="@color/add_video_details.remove"-->
-    <!--android:textSize="14sp"-->
-    <!--fab:fontName="oswald_regular.ttf" />-->
-    <!--</RelativeLayout>-->
 
     <View
         android:id="@+id/underline2"
