--- a/MyCity4Kids/MyCity4Kids/res/layout/view_time_line.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/view_time_line.xml
@@ -37,10 +37,23 @@
         android:layout_alignParentBottom="true"
         android:background="@color/background_video_color">
 
+        <TextView
+            android:id="@+id/text_seekbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:gravity="center"
+            android:text="@string/select_thumbnail"
+            android:textColor="@color/white" />
+
         <SeekBar
             android:id="@+id/handlerTop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/text_seekbar"
             android:layout_gravity="center_horizontal"
             android:max="1000"
             android:progressDrawable="@android:color/transparent"
@@ -90,8 +103,8 @@
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@color/line_button" />
 
             <Button
@@ -111,25 +124,25 @@
         android:id="@+id/timeText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/layout"
+        android:layout_above="@+id/layout"
         android:visibility="visible">
 
         <TextView
             android:id="@+id/textSize"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/textTimeSelection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/textSize"
-            android:layout_toLeftOf="@+id/textTime"
-            android:layout_toRightOf="@+id/textSize"
             android:layout_toStartOf="@+id/textTime"
+            android:layout_toLeftOf="@+id/textTime"
+            android:layout_toEndOf="@+id/textSize"
+            android:layout_toRightOf="@+id/textSize"
             android:gravity="center"
             android:textColor="@android:color/white" />
 
