--- a/MyCity4Kids/MyCity4Kids/res/layout/add_video_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_video_details_activity.xml
@@ -57,7 +57,7 @@
         android:layout_height="250dp"
         android:layout_below="@+id/videoTitleEditText" />
 
-    <Switch
+    <android.support.v7.widget.SwitchCompat
         android:id="@+id/muteVideoSwitch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
