--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -593,9 +593,7 @@
                     android:layout_above="@+id/exploreVerticalLine"
                     android:layout_marginLeft="35dp"
                     android:background="@drawable/coachmark_round_layout"
-                    android:gravity="center"
-
-                    >
+                    android:gravity="center">
 
                     <android.support.v7.widget.AppCompatImageView
                         android:id="@+id/exploreGuideTextView"
@@ -870,6 +868,151 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/vlogsCoachmark"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:background="@color/dark_transparent"
+                android:elevation="8dp"
+                android:visibility="invisible">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/navBar1"
+                    android:weightSum="5">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="1"
+                        android:background="@color/white"
+                        android:visibility="invisible" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="1"
+                        android:background="@color/white"
+                        android:visibility="invisible" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="1"
+                        android:background="@color/white"
+                        android:visibility="invisible" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="1"
+                        android:background="@color/white" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="1"
+                        android:background="@color/white"
+                        android:visibility="invisible" />
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/verticalLine03"
+                    android:layout_width="2dp"
+                    android:layout_height="30dp"
+                    android:layout_above="@+id/navBar1"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="120dp"
+                    android:background="@color/white" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/vlogGuideTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/verticalLine03"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="15dp"
+                    android:background="@color/white"
+                    android:paddingLeft="9dp"
+                    android:paddingTop="7dp"
+                    android:paddingRight="9dp"
+                    android:paddingBottom="7dp"
+                    android:text="@string/guide.vlogs_tour"
+                    android:textColor="@color/black"
+                    app:fontName="oswald.ttf" />
+
+                <LinearLayout
+                    android:id="@+id/navBar1"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="horizontal"
+                    android:weightSum="5">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:src="@drawable/ic_mom_vlogs"
+                            android:tint="@color/white"
+                            android:visibility="visible" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/all_videos.toolbar.title.homepage"
+                            android:textColor="@color/white"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/groupCoachmark"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -926,18 +1069,6 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <!--<ImageView-->
-                        <!--android:layout_width="28dp"-->
-                        <!--android:layout_height="28dp"-->
-                        <!--android:src="@drawable/home_red"-->
-                        <!--android:visibility="visible" />-->
-
-                        <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center"-->
-                        <!--android:text="Home"-->
-                        <!--android:textSize="12sp" />-->
                     </LinearLayout>
 
                     <LinearLayout
@@ -947,18 +1078,6 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <!--<ImageView-->
-                        <!--android:layout_width="28dp"-->
-                        <!--android:layout_height="28dp"-->
-                        <!--android:src="@drawable/ic_bottom_discover"-->
-                        <!--android:visibility="visible" />-->
-
-                        <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center"-->
-                        <!--android:text="Discover"-->
-                        <!--android:textSize="12sp" />-->
                     </LinearLayout>
 
                     <LinearLayout
@@ -968,18 +1087,6 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <!--<ImageView-->
-                        <!--android:layout_width="28dp"-->
-                        <!--android:layout_height="28dp"-->
-                        <!--android:src="@drawable/navigation_create_button"-->
-                        <!--android:visibility="visible" />-->
-
-                        <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center"-->
-                        <!--android:text="Create"-->
-                        <!--android:textSize="12sp" />-->
                     </LinearLayout>
 
                     <LinearLayout
@@ -989,18 +1096,6 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <!--<ImageView-->
-                        <!--android:layout_width="28dp"-->
-                        <!--android:layout_height="28dp"-->
-                        <!--android:src="@drawable/tab2"-->
-                        <!--android:visibility="visible" />-->
-
-                        <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center"-->
-                        <!--android:text="Notification"-->
-                        <!--android:textSize="12sp" />-->
                     </LinearLayout>
 
                     <LinearLayout
@@ -1916,13 +2011,13 @@
                 app:fontName="oswald.ttf" />
 
             <LinearLayout
-                android:background="@color/white"
                 android:id="@+id/rewardsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_below="@+id/groupsMyMoneyTextView"
+                android:background="@color/white"
                 android:paddingLeft="30dp"
                 android:paddingRight="16dp"
-                android:layout_below="@+id/groupsMyMoneyTextView"
                 android:paddingBottom="12dp">
 
                 <ImageView
