--- a/MyCity4Kids/MyCity4Kids/res/layout/dialog_group_yourself.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/dialog_group_yourself.xml
@@ -17,6 +17,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_gravity="right"
+            android:tint="@color/app_red"
             android:layout_marginTop="@dimen/space_10"
             android:layout_marginRight="@dimen/space_10"
             android:src="@drawable/cross_icon_back" />
@@ -54,9 +55,10 @@
         <com.mycity4kids.widget.CustomFontEditText
             android:id="@+id/post_edit"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
             android:layout_below="@+id/border"
             android:layout_marginLeft="@dimen/space_20"
+            android:gravity="top"
             android:layout_marginTop="@dimen/space_20"
             android:background="@null"
             android:hint="Write Something"
@@ -69,7 +71,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/post_edit"
-            android:layout_marginTop="@dimen/space_100"
             android:layout_marginBottom="@dimen/space_20">
 
             <ImageView
