Missing Translation + Vlogs not opening from users feed + article audio playing in bg

--- a/MyCity4Kids/MyCity4Kids/res/layout/dialog_group_yourself.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/dialog_group_yourself.xml
@@ -61,7 +61,7 @@
             android:gravity="top"
             android:layout_marginTop="@dimen/space_20"
             android:background="@null"
-            android:hint="Write Something"
+            android:hint="@string/write_something"
             android:textColor="@color/color_A0A0A0"
             android:textColorHint="@color/color_A0A0A0"
             android:textSize="12sp"
