--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -395,7 +395,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="6dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <View
             android:id="@+id/overlayView"
