--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_container.xml
@@ -58,7 +58,7 @@
         android:src="@drawable/back_arroow"
         android:visibility="gone" />
 
-    <android.support.v4.view.ViewPager
+    <com.mycity4kids.widget.CustomViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -107,8 +107,8 @@
         <View
             android:layout_width="40dp"
             android:layout_height="2dp"
-            android:layout_alignParentRight="true"
             android:layout_below="@+id/guidetoolbar"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:background="@color/white" />
 
@@ -116,8 +116,8 @@
             android:id="@+id/verticalLine1"
             android:layout_width="2dp"
             android:layout_height="30dp"
-            android:layout_alignParentRight="true"
             android:layout_below="@+id/guidetoolbar"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="28dp"
             android:background="@color/white" />
 
@@ -125,14 +125,14 @@
             android:id="@+id/langGuideTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_below="@+id/verticalLine1"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:background="@color/white"
-            android:paddingBottom="7dp"
             android:paddingLeft="9dp"
-            android:paddingRight="9dp"
             android:paddingTop="7dp"
+            android:paddingRight="9dp"
+            android:paddingBottom="7dp"
             android:text="@string/guide.listen_tour"
             android:textColor="@color/black"
             app:fontName="oswald.ttf" />
@@ -161,10 +161,10 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:background="@color/white"
-            android:paddingBottom="7dp"
             android:paddingLeft="9dp"
-            android:paddingRight="9dp"
             android:paddingTop="7dp"
+            android:paddingRight="9dp"
+            android:paddingBottom="7dp"
             android:text="@string/guide.share_like_bookmark_tour"
             android:textColor="@color/black"
             app:fontName="oswald.ttf" />
@@ -176,8 +176,8 @@
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
             android:orientation="horizontal"
-            android:paddingBottom="6dp"
-            android:paddingTop="6dp">
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp">
 
         </LinearLayout>
     </RelativeLayout>
