--- a/MyCity4Kids/MyCity4Kids/res/layout/add_short_story_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_short_story_activity.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/root"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <RelativeLayout
             android:id="@+id/rootLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -149,10 +148,10 @@
                 android:hint="@string/short_s.add.title_hint"
                 android:maxLength="60"
                 android:maxLines="2"
-                android:paddingBottom="15dp"
                 android:paddingLeft="14dp"
-                android:paddingRight="14dp"
                 android:paddingTop="15dp"
+                android:paddingRight="14dp"
+                android:paddingBottom="15dp"
                 android:textColor="@color/short_story.light_black_color"
                 android:textSize="17sp"
                 app:fontName="georgia.ttf" />
@@ -173,8 +172,8 @@
                 android:gravity="top|left"
                 android:hint="@string/short_s.add.body_hint"
                 android:paddingLeft="14dp"
-                android:paddingRight="14dp"
                 android:paddingTop="15dp"
+                android:paddingRight="14dp"
                 android:textColor="@color/short_story.light_black_color"
                 android:textSize="16sp"
                 app:fontName="georgia.ttf" />
@@ -183,8 +182,8 @@
                 android:id="@+id/wordCounterTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignRight="@+id/storyBodyEditText"
                 android:layout_alignTop="@+id/storyBodyEditText"
+                android:layout_alignRight="@+id/storyBodyEditText"
                 android:padding="5dp"
                 android:text=""
                 android:textColor="@color/app_grey"
