--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_fragment.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -20,10 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="2"
-            android:paddingBottom="15dp"
             android:paddingLeft="14dp"
-            android:paddingRight="14dp"
             android:paddingTop="15dp"
+            android:paddingRight="14dp"
+            android:paddingBottom="15dp"
             android:text=""
             android:textColor="@color/short_story.light_black_color"
             android:textSize="18sp"
@@ -44,8 +45,8 @@
             android:layout_below="@+id/separator"
             android:lineSpacingExtra="4dp"
             android:paddingLeft="14dp"
-            android:paddingRight="14dp"
             android:paddingTop="15dp"
+            android:paddingRight="14dp"
             android:text=""
             android:textColor="@color/short_story.light_black_color"
             android:textSize="16sp"
@@ -76,12 +77,12 @@
         android:id="@+id/openAddCommentDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         app:fab_colorNormal="@color/app_red"
         app:fab_colorPressed="@color/app_red"
         app:fab_icon="@drawable/ic_add_comments" />
